# edu

./: .env.example  .gitignore  pyproject.toml  requirements.txt  啟動本機網站.command  本機後端說明.md
backend/: __init__.py  analyzer.py  app.py  macos_ocr.py  test_smoke.py
supabase/: schema.sql
網站原型/: app.js  index.html  styles.css
