[project]
name = "giraffe-education-advisory"
version = "0.1.0"
description = "Education advisory dashboard prototype for branch school analysis."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.139.0",
    "openpyxl==3.1.5",
    "pillow==12.3.0",
    "pypdf==6.14.2",
    "python-docx==1.2.0",
    "python-multipart==0.0.32",
    "uvicorn==0.49.0",
    "xlrd==2.0.2",
    "pyobjc-framework-Quartz==12.2.1; platform_system == 'Darwin'",
    "pyobjc-framework-Vision==12.2.1; platform_system == 'Darwin'",
]

[tool.vercel]
entrypoint = "backend.app:app"
